# BigEye

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/frizzle/bigeye/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FaceTrack.cpp  FaceTrack.h  macro.h  native-lib.cpp
app/src/main/cpp/FaceAlignment/: CMakeLists.txt
app/src/main/java/com/frizzle/bigeye/: MainActivity.java
app/src/main/java/com/frizzle/bigeye/face/: Face.java  OpenCVJni.java
app/src/main/java/com/frizzle/bigeye/filter/: AbstractFilter.java  AbstractFrameFilter.java  BeautyFilter.java  BigEyeFilter.java  CameraFilter.java  ScreenFilter.java  StickFilter.java
app/src/main/java/com/frizzle/bigeye/util/: CameraHelper.java  DisplayUtil.java  OpenGLUtils.java  Utils.java
app/src/main/java/com/frizzle/bigeye/view/: FGLRender.java  FGLView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: base_frag.frag  beauty_frag.glsl  bigeye_frag.frag  camera_frag.frag  camera_vertex.vert
app/src/main/res/values/: strings.xml
app/src/test/java/com/frizzle/bigeye/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
